[project]
name = "unfakepy_warpper_pixelatedTools"
description = "Warp Unfake.py for ComfyUI. A great tool for pixelated AIGC pixel artwork"
version = "1.0.4"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["unfake==1.0.7", "nest_asyncio"]

[project.urls]
Repository = "https://github.com/AhBumm/ComfyUI_UnfakePy_Warpper"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/AhBumm/ComfyUI_UnfakePy_Warpper/wiki"
"Bug Tracker" = "https://github.com/AhBumm/ComfyUI_UnfakePy_Warpper/issues"

[tool.comfy]
PublisherId = "billbum"
DisplayName = "ComfyUI_UnfakePy_Warpper"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

